# test-helper

./: .cspell.json  .git-blame-ignore-revs  Cargo.toml  README.md
.github/.cspell/: project-dictionary.txt  rust-dependencies.txt
.github/workflows/: ci.yml
src/: cli.rs  codegen.rs  cpuinfo.rs  critical_section_std.rs  doc.rs  git.rs  lib.rs  macros.rs  once_lock.rs  sys_macros.rs
target-specs/: aarch64-unknown-l4re-uclibc.json  aarch64-unknown-linux-uclibc.json  armebv6-unknown-netbsd-eabihf.json  armv7-unknown-openbsd.json  powerpc-unknown-linux-uclibc.json  powerpc64-unknown-netbsd.json  sparc-unknown-linux-uclibc.json  sparc-unknown-netbsd.json  sparc64-unknown-linux-uclibc.json
tools/: gen.sh
tools/ci/: gen.sh
tools/codegen/: Cargo.toml
tools/codegen/patches/: _linux-gnu.diff  fuchsia.diff  netbsd.diff
tools/codegen/src/: ffi.rs  file.rs  main.rs
