[package]
name = "test-helper-internal-codegen"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
test-helper = { path = "../..", features = ["codegen"] }

bindgen = { default-features = false, features = ["prettyplease", "runtime"], git = "https://github.com/taiki-e/rust-bindgen.git", branch = "dev" } # https://github.com/rust-lang/rust-bindgen/pull/2369 + avoid https://github.com/rust-lang/cargo/issues/10623 + avoid bug on generate c str option
camino = "1"
duct = { version = "1", default-features = false }
fs-err = "3"
quote = { version = "1", default-features = false }
regex = { version = "1", default-features = false, features = ["std"] }
syn = { version = "2", default-features = false, features = ["parsing", "printing", "full"] }
target-spec-json = "0.2"

[lints]
workspace = true
